<resources>
    <string name="app_name">Cleaner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uninstall">Uninstall</string>
    <string name="optimizebattery">optimize battery</string>
    <string name="search">Search...</string>
    <string name="permission_denied_explanation">Try Again</string>
    <string name="ok">Ok</string>
    <string name="GetStart">Get Start</string>


    <string name="admob_id">ca-app-pub-1102320340751314~7802098621</string>
    <string name="admob_interstitial">ca-app-pub-1102320340751314/8631146322</string>

    <string name="corpse_summary">Files left over from uninstalled apps</string>
    <string name="corpse_title">Delete corpse files</string>
    <string name="delete_apk_files">Delete .apk files</string>
    <string name="delete_thumb_folder">Delete (.Thumbnails) Folder</string>
    <string name="delete_junk_Files">Delete Junk Files</string>
    <string name="delete_visible">Delete Visible Caches</string>
    <string name="apk_sum">Installer files for android</string>
    <string name="files_junk">Delete Files .Tmp , .log  ...</string>
    <string name="delete_empty_folders">Delete empty folders</string>
    <string name="Cache">Delete cache files For Apps</string>

    <string name="Delete_Selected">Delete Selected</string>
    <string name="Delete_Selected_message">The Selected items will be removed from your device</string>

    <string name="support">Feedback</string>
    <string name="Share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="let_recommend">Let me recommend you this application</string>
    <string name="battery_saver">Battery usage</string>
    <string name="apps">Apps</string>
    <string name="cleaner">Cleaner</string>
    <string name="duplicate">Duplicate Files</string>
    <string name="clean">Clean</string>
    <string name="booster">Boost</string>
    <string name="boost">Quick Boost</string>
    <string name="free_up_storage_space">Free up storage space</string>
    <string name="free_up_space_from_ram">Saved Space</string>
    <string name="complete_the_process">Complete the Process</string>
    <string name="the_app_needs_to_give_permission">The app needs to grant permission to be able to Clean cache and junk data
    </string>
    <string name="grant_permission">Grant permission</string>
    <string name="Privacy">Privacy</string>
    <string name="Media">Files</string>
    <string name="Remove">Delete</string>
    <string name="BigSize">big Size</string>
    <string name="SmallSize">Small Size</string>
    <string name="lastmodified">last modified</string>
    <string-array name="generic_filter_files">
        <item>.tmp</item>
        <item>.log</item>
    </string-array>
    <string-array name="generic_filter_folders">
        <item>Logs</item>
        <item>logs</item>
        <item>temp</item>
        <item>Temporary</item>
        <item>temporary</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="aggressive_filter_folders">
        <item>supersonicads</item>
        <item>Cache</item>
        <item>Analytics</item>
        <item>thumbnails?</item>
        <item>mobvista</item>
        <item>UnityAdsVideoCache</item>
        <item>albumthumbs?</item>
        <item>LOST.DIR</item>
        <item>.Trash</item>
        <item>desktop.ini</item>
        <item>leakcanary</item>
        <item>.DS_Store</item>
        <item>.spotlight-V100</item>
        <item>fseventsd</item>
        <item>Bugreport</item>
        <item>bugreports</item>
        <item>.Trash</item>
        <item>cache</item>
        <item>splashad</item>
    </string-array>
    <string-array name="aggressive_filter_files">
        <item>.exo</item>
        <item>thumbs?.db</item>
        <item>.thumb[0-9]</item>
        <item>splashad</item>
    </string-array>
    <string-array name="themes">
        <item>Auto</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>


    <string name="privacy">

Privacy Policy
Kerols built the Phone Cleaner Master app as a Free app. This SERVICE is provided by Kerols at no cost and is intended for use as is.

This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.

If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at Phone Cleaner Master unless otherwise defined in this Privacy Policy.

Information Collection and Use

For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to kerols. The information that I request will be retained on your device and is not collected by me in any way.

The app does use third-party services that may collect information used to identify you.

Link to the privacy policy of third-party service providers used by the app

Google Play Services
Unity
AppLovin
Log Data

I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.

Cookies

Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.

This Service does not use these “cookies” explicitly. However, the app may use third-party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.

Service Providers

I may employ third-party companies and individuals due to the following reasons:

To facilitate our Service;
To provide the Service on our behalf;
To perform Service-related services; or
To assist us in analyzing how our Service is used.
I want to inform users of this Service that these third parties have access to their Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.

Security

I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.

Links to Other Sites

This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

Children’s Privacy

These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13 years of age. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do the necessary actions.

Changes to This Privacy Policy

I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.

This policy is effective as of 2023-11-08

Contact Us

If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at ConverterFiles1@gmail.com.

        </string>
    <string name="cashed">Cashed</string>

</resources>