<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sort By"
        android:textSize="18sp"
        android:textColor="?actionMenuTextColor"
        android:textStyle="bold"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="16dp"
        android:id="@+id/radioGroup"

        >
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BigSize"
            android:padding="16dp"
            android:id="@+id/radioBig"

            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SmallSize"
            android:padding="16dp"
            android:id="@+id/radioSmall"

            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lastmodified"
            android:padding="16dp"
            android:id="@+id/radioLast"

            />



    </RadioGroup>


</LinearLayout>