<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg"
    android:backgroundTint="@color/bg"
    tools:context=".Fragments.FragmentPermissionFile">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/hello_blank_fragment" >
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="42dp"
            android:src="@drawable/exclamation_mark_circle_svgrepo_com"
            app:tint="@color/cardColorBackground" />
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="italic"
            android:textSize="16sp"
            android:textColor="@color/textColor"
            android:text="@string/the_app_needs_to_give_permission"
            android:layout_marginBottom="24dp"
            />


        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_file"
            app:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/grant_permission"
            />


    </LinearLayout>

</RelativeLayout>