<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home"
    app:startDestination="@id/fragmentHome">
    <include app:graph="@navigation/nav_packages" />

    <fragment
        android:id="@+id/fragmentHome"
        android:name="com.kerols.phoneboost.Fragments.FragmentHome"
        android:label="@string/app_name" >

        <action
            android:id="@+id/action_fragmentHome_to_nav_packages"
            app:destination="@id/nav_packages"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_right" />

        <action
            android:id="@+id/action_fragmentHome_to_fragmentPermissionFile"
            app:destination="@id/fragmentPermissionFile"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_right"  />

        <action
            android:id="@+id/action_fragmentHome_to_cleanerHome"
            app:destination="@id/cleanerHome"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_right" />
        <action
            android:id="@+id/action_fragmentHome_to_cleanerProcess"
            app:destination="@id/cleanerProcess"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_right" />
        <action
            android:id="@+id/action_fragmentHome_to_privacy2"
            app:destination="@id/privacy2"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_right"
            />
        <action
            android:id="@+id/action_fragmentHome_to_mediaHomeFragment"
            app:destination="@id/mediaHomeFragment"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_right"
            />

    </fragment>

    <fragment
        android:id="@+id/fragmentPermissionFile"
        android:name="com.kerols.phoneboost.Fragments.FragmentPermissionFile"
        android:label=""
        tools:layout="@layout/fragment_permission_file" >
        <action
            android:id="@+id/action_fragmentPermissionFile_to_fragmentHome2"
            app:destination="@id/fragmentHome"
            app:popUpTo="@id/fragmentHome"
            app:popUpToInclusive="true" />
    </fragment>


    <fragment
        android:id="@+id/cleanerHome"
        android:name="com.kerols.phoneboost.Fragments.CleanerHome"
        android:label="@string/cleaner"
        tools:layout="@layout/fragment_cleaner_home" >
        <action
            android:id="@+id/action_cleanerHome_to_cleanerProcess"
            app:destination="@id/cleanerProcess"
            app:popUpTo="@id/cleanerHome"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_right" />
    </fragment>


    <fragment
        android:id="@+id/cleanerFinish"
        android:name="com.kerols.phoneboost.Fragments.CleanerFinish"
        android:label=""
        tools:layout="@layout/fragment_cleaner_finish" >
        <argument
            android:name="result"
            app:argType="long" />
    </fragment>


    <fragment
        android:id="@+id/cleanerProcess"
        android:name="com.kerols.phoneboost.Fragments.CleanerProcess"
        android:label=""
        tools:layout="@layout/fragment_cleaner_process" >
        <action
            android:id="@+id/action_cleanerProcess_to_cleanerFinish"
            app:destination="@id/cleanerFinish"
            app:popUpTo="@id/cleanerProcess"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_right" />
        <argument
            android:name="appcleaninfo"
            app:argType="boolean[]" />

    </fragment>


    <fragment
        android:id="@+id/privacy2"
        android:name="com.kerols.phoneboost.Fragments.Privacy"
        android:label="About"
        tools:layout="@layout/fragment_privacy" />
    <fragment
        android:id="@+id/mediaHomeFragment"
        android:name="com.kerols.phoneboost.Fragments.MediaHomeFragment"
        android:label="@string/Media"
        tools:layout="@layout/fragment_media_home" >
        <action
            android:id="@+id/action_mediaHomeFragment_to_mediaChooseFragment"
            app:destination="@id/mediaChooseFragment"
            app:popUpToInclusive="false"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_right"
            />
    </fragment>

    <fragment
        android:id="@+id/mediaProcessFragment"
        android:name="com.kerols.phoneboost.Fragments.MediaProcessFragment"
        android:label=""
        tools:layout="@layout/fragment_media_process" >
        <action
            android:id="@+id/action_mediaProcessFragment_to_cleanerFinish"
            app:destination="@id/cleanerFinish"
            app:popUpTo="@id/mediaProcessFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="size"
            app:argType="long" />
        <argument
            android:name="data"
            app:argType="string[]" />
    </fragment>

    <fragment
        android:id="@+id/mediaChooseFragment"
        android:name="com.kerols.phoneboost.Fragments.MediaChooseFragment"
        android:label=""
        tools:layout="@layout/fragment_media_choose" >
        <action
            android:id="@+id/action_mediaChooseFragment_to_mediaProcessFragment"
            app:destination="@id/mediaProcessFragment"
            app:popUpTo="@id/mediaHomeFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_right"
            />
        <argument
            android:name="mimetype"
            app:argType="string" />
    </fragment>

</navigation>